--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,7 +4,8 @@ global:
 scrape_configs:
   - job_name: 'spring-boot-app'
     static_configs:
-      - targets: ['host.docker.internal:8080'] # intellj로 실행 중이거나 별도 네트워크 없이 직접 연결하겠다
+#      - targets: ['host.docker.internal:8080'] # intellj로 실행 중이거나 별도 네트워크 없이 직접 연결하겠다
+      - targets: ['app:8080'] # 네트워크에서 컨테이너 이름으로 연결하겠다
     metrics_path: '/actuator/prometheus'
 
 # alert manager
@@ -15,4 +16,5 @@ rule_files:
 alerting:
   alertmanagers:
     - static_configs:
-        - targets: ['host.docker.internal:9093']
+#        - targets: ['host.docker.internal:9093']
+        - targets: ['alert:9093']
