--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     image: prom/alertmanager:latest
     volumes:
       - ./prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    env_file:
+      - .env
     ports:
       - "9093:9093"
     networks:
